add pcre2, Hypertscan and RE2